// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getModuleSpecifiers should build module dependency graph by file path 1`] = `
DependencyGraph {
  "allModules": Map {
    "test/module-test/index.ts" => JavascriptModule {
      "_filePath": "/Users/penghui/coding/jsjs/DependencyGraph/test/module-test/index.ts",
      "_id": "test/module-test/index.ts",
    },
    "math" => JavascriptModule {
      "_filePath": "/Users/penghui/coding/jsjs/DependencyGraph/test/module-test/math.ts",
      "_id": "math",
    },
    "data" => JavascriptModule {
      "_filePath": "/Users/penghui/coding/jsjs/DependencyGraph/test/module-test/data.ts",
      "_id": "data",
    },
  },
  "entry": DependencyGraphNode {
    "dependencies": Array [
      DependencyGraphNode {
        "dependencies": Array [],
        "value": JavascriptModule {
          "_filePath": "/Users/penghui/coding/jsjs/DependencyGraph/test/module-test/math.ts",
          "_id": "math",
        },
      },
      DependencyGraphNode {
        "dependencies": Array [],
        "value": JavascriptModule {
          "_filePath": "/Users/penghui/coding/jsjs/DependencyGraph/test/module-test/data.ts",
          "_id": "data",
        },
      },
    ],
    "value": JavascriptModule {
      "_filePath": "/Users/penghui/coding/jsjs/DependencyGraph/test/module-test/index.ts",
      "_id": "test/module-test/index.ts",
    },
  },
}
`;

exports[`getModuleSpecifiers should build module dependency graph by folder path 1`] = `
DependencyGraph {
  "allModules": Map {
    "test/module-test" => JavascriptModule {
      "_filePath": "/Users/penghui/coding/jsjs/DependencyGraph/test/module-test/index.ts",
      "_id": "test/module-test",
    },
    "math" => JavascriptModule {
      "_filePath": "/Users/penghui/coding/jsjs/DependencyGraph/test/module-test/math.ts",
      "_id": "math",
    },
    "data" => JavascriptModule {
      "_filePath": "/Users/penghui/coding/jsjs/DependencyGraph/test/module-test/data.ts",
      "_id": "data",
    },
  },
  "entry": DependencyGraphNode {
    "dependencies": Array [
      DependencyGraphNode {
        "dependencies": Array [],
        "value": JavascriptModule {
          "_filePath": "/Users/penghui/coding/jsjs/DependencyGraph/test/module-test/math.ts",
          "_id": "math",
        },
      },
      DependencyGraphNode {
        "dependencies": Array [],
        "value": JavascriptModule {
          "_filePath": "/Users/penghui/coding/jsjs/DependencyGraph/test/module-test/data.ts",
          "_id": "data",
        },
      },
    ],
    "value": JavascriptModule {
      "_filePath": "/Users/penghui/coding/jsjs/DependencyGraph/test/module-test/index.ts",
      "_id": "test/module-test",
    },
  },
}
`;

exports[`getModuleSpecifiers should get module specifiers 1`] = `
Array [
  "mod1",
  "mod2",
  "mod3",
  "mod4",
  "mod5",
  "mod6",
]
`;
